fix: fix css navigation tablet view

--- a/frontend/app/components/navigation/Navigation.module.css
+++ b/frontend/app/components/navigation/Navigation.module.css
@@ -26,7 +26,6 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      background-color: ;
       flex-grow: 1;
       align-items: center;
 
@@ -66,6 +65,9 @@
           flex-direction: row;
           padding: 0.688rem 1.688rem;
           border-radius: 0.5rem;
+          align-items: center;
+          gap: 0.5rem;
+
 
           &:hover {
             cursor: pointer;
@@ -106,6 +108,7 @@
     padding: 0.688rem 1rem;
     border-radius: 0.5rem;
     outline: 1px solid var(--purple);
+
 
     cursor: pointer;
 
@@ -178,80 +181,45 @@
 
 @media screen and (min-width: 768px) {
   .navigation_container {
-    justify-content: center;
-    background-color: var(--light-grey);
-    height: 7.875rem;
     padding: 1.5rem;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 
     .navigation_content {
-      border-radius: 0.75rem;
-      padding: 1rem 1rem 1rem 1.5rem;
-      background-color: white;
-      align-items: center;
-
-      .img_container {
-        width: 9.125rem;
-        display: block;
-        height: 2rem;
-
-
-        .img {
-          background-image: url("../../assets/images/logo-devlinks-large.svg");
-          object-fit: contain;
-          background-size: 9.125rem 2rem;
-          margin-block: auto;
-
-        }
-      }
-
-    }
-
-    .link_group {
-      width: fit-content;
-
-      .icon_container {
-        padding: 0.688rem 1.688rem;
-        width: fit-content;
-        display: flex;
-        gap: 0.5rem;
-
-        .svg_img {
-          height: 3rem;
-          width: 3rem;
-        }
-
-      }
-
-      font-family: "Instrument Sans", serif;
-      font-size: 1rem;
-      line-height: 150%;
-      letter-spacing: 0;
-      font-weight: 600;
-
-      color: var(--grey);
-
-      .active {
-        background-color: var(--light-pink);
-        color: var(--purple);
-
-        path {
-          fill: var(--purple) !important;
-        }
-      }
-
-      &:hover {
-        color: var(--purple);
-      }
-
-    }
-
-    .preview_icon_container {
       display: flex;
-      justify-content: center;
-      max-width: 7.125rem;
-      padding: 0.688rem 1.688rem;
-      width: fit-content;
+      flex-direction: column;
+      padding: 1rem 1rem 1rem 1rem;
+      gap: 0.5rem;
+      width: 100%;
+
+      .navigation_group {
+
+        .img_container {
+          width: 9.125rem;
+          height: 2rem;
+
+          .img_group {
+            width: 9.125rem;
+            height: 2rem;
+
+            .svg_container {
+              width: 100%;
+              height: 100%;
+
+              .img {
+                background-image: url("../../assets/images/logo-devlinks-large.svg");
+                background-size: 100%;
+                background-repeat: no-repeat;
+
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
+
+
+
