--- a/frontend/app/styles/dashboard.links.module.css
+++ b/frontend/app/styles/dashboard.links.module.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     flex-grow: 1;
 
-    background-color: lightblue;
+    background-color: white;
     border-radius: 0.75rem;
     overflow-y: hidden;
 
